--- a/basket.html
+++ b/basket.html
@@ -48,7 +48,7 @@
                         <input type="text" id="tg" name="tg" placeholder="@" maxlength="99" required>
                     </div>
                     <div class="form-group">
-                        <button type="submit">Оформить заказ</button><span style="margin-left: 10px;">Общая сумма: <span class="total-amount">0</span>₺</span>
+                        <button type="submit">Оформить заказ</button><span class="total-price" style="margin-left: 10px;">Общая сумма: <span class="total-amount">0</span>₺</span>
                     </div>
                 </form>
             </div>
